[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=5]

[node name="Main" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 599.0
margin_bottom = 603.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoPedra1" type="Button" parent="."]
margin_left = 29.6588
margin_top = 166.568
margin_right = 165.659
margin_bottom = 229.568
text = "Pedra"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoPapel1" type="Button" parent="."]
margin_left = 240.932
margin_top = 166.955
margin_right = 366.932
margin_bottom = 229.955
text = "Papel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoTesoura1" type="Button" parent="."]
margin_left = 426.659
margin_top = 166.0
margin_right = 569.659
margin_bottom = 229.0
text = "Tesoura"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoPedra2" type="Button" parent="."]
margin_left = 25.6588
margin_top = 308.568
margin_right = 161.659
margin_bottom = 371.568
text = "Pedra"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoPapel2" type="Button" parent="."]
margin_left = 236.932
margin_top = 308.955
margin_right = 362.932
margin_bottom = 371.955
text = "Papel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoTesoura2" type="Button" parent="."]
margin_left = 422.659
margin_top = 308.0
margin_right = 565.659
margin_bottom = 371.0
text = "Tesoura"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelEscolha" type="Label" parent="."]
margin_left = 45.5717
margin_top = 51.3674
margin_right = 123.572
margin_bottom = 65.3674
text = "Escolha uma opção para o Jogador 1 e para o Jogador 2:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelJogador1" type="Label" parent="."]
margin_left = 39.0
margin_top = 129.0
margin_right = 101.0
margin_bottom = 143.0
text = "Jogador 1: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelJogador2" type="Label" parent="."]
margin_left = 37.0
margin_top = 274.0
margin_right = 99.0
margin_bottom = 288.0
text = "Jogador 2: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVencedor" type="Label" parent="."]
margin_left = 41.0
margin_top = 451.0
margin_right = 105.0
margin_bottom = 465.0
text = "Vencedor:"
__meta__ = {
"_edit_use_anchors_": false
}
